<?xml version="1.0" encoding="utf-8"?>
<resources>
<!--Main Activity-->
    <string name="app_name">HTTPget</string>
    <string name="content">content</string>
    <string name="output">Output :</string>
    <string name="button_send">Send</string>

<!--Options menu-->
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>

<!--Settings screen-->
    <string name="pref_limit">Limit</string>
    <string name="pref_limit_summary">Input limit</string>
    <string name="pref_limit_default">1</string>
    <string name="pref_api_key">API key</string>
    <string name="pref_api_key_summary">Input API key</string>
    <string name="pref_api_key_default">b9e46db0-4108-4680-a29f-f10d37895e9c</string>
    <string name="pref_projectID">Project ID</string>
    <string name="pref_projectID_summary">Input project ID</string>
    <string name="pref_projectID_default">200</string>
    <string name="pref_sensorID">Sensor ID</string>
    <string name="pref_sensorID_summary">Input Sensor ID</string>
    <string name="pref_sensorID_default">413</string>
</resources>
