<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
        //provider xively/devicehub...
        api_key
        retrived data range
        projectID
        sensorID
        -->
    <EditTextPreference
            android:key="pref_limit_key"
            android:title="@string/pref_limit"
            android:summary="@string/pref_limit_summary"
            android:dialogTitle="@string/pref_limit"
            android:defaultValue="@string/pref_limit_default"
            />
    <EditTextPreference
            android:key="pref_api_key_key"
            android:title="@string/pref_api_key"
            android:summary="@string/pref_api_key_summary"
            android:dialogTitle="@string/pref_api_key"
            android:defaultValue="@string/pref_api_key_default"
            />
    <EditTextPreference
            android:key="pref_projectID_key"
            android:title="@string/pref_projectID"
            android:summary="@string/pref_projectID_summary"
            android:dialogTitle="@string/pref_projectID"
            android:defaultValue="@string/pref_projectID_default"
            />
    <EditTextPreference
            android:key="pref_sensorID_key"
            android:title="@string/pref_sensorID"
            android:summary="@string/pref_api_key_summary"
            android:dialogTitle="@string/pref_sensorID"
            android:defaultValue="@string/pref_sensorID_default"
            />
</PreferenceScreen>
